# vllm-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
cuda/: attention.cu  attention.h  attention_kernels.cuh  moe_dispatch.cu  moe_dispatch.h  moe_kernels.cuh  tp.cu  tp.h  tp_model.cu  tp_model.h  utils.cuh
src/: chat_prompt.h  config.h  cpu_runner.cpp  device.h  http_server.cpp  http_utils.h  interactive.cpp  json_utils.h  kv_cache_manager.cpp  kv_cache_manager.h  mlx_backend.cpp  mlx_backend.h  mlx_runner.cpp  model.cpp  model.h  paged_attention.cpp  paged_attention.h  paged_engine.cpp  paged_engine.h  quant_loader.cpp  quant_loader.h  quantization.cpp  quantization.h  request.h  scheduler.cpp  scheduler.h  server.cpp
tests/: test_deep_debug.py  test_fixed_rope.py  test_manual_attention.py  test_manual_attn_fixed.py  test_mlx_debug.py  test_mlx_minimal.py  test_rope.py  test_rope_layout.py  test_transpose_verify.py
